--- a/code/Actus.html
+++ b/code/Actus.html
@@ -29,18 +29,18 @@
                  <br>
             <br>
             <h1><strong>NOUVELLE FAUTEUIL DENTAIRE</strong></h1>
-            <img src="IMG_4410.JPG" >
+            <img src="image/IMG_4410.JPG" >
             <h2><font size="6pt">La necessite de mettre a jour une clinique est appreciee, par exemple, lorsque le technicien entreprend des renovations frequentes. Parfois, tous les elements en plastique des fauteuils dentaires, tels que les tuyaux, le systeme d'aspiration interne et externe ou les drains, se degradent et se dessechent, ce qui peut entrainer des pertes et des fuites. En ce sens, on estime que les plastiques ont une duree de vie de 10 ans. Un fauteuil dentaire moderne est dote de nouveaux traitements et de nouveaux materiaux qui prolongent cette vie utile. a ce stade, la gestion dentaire est essentielle </h2>
                  <br>
             <br>
                  <h1><strong>COMMANDES INTELLIGENTES</strong></h1>
-                 <img src="IMG_4464.JPG" >
+                 <img src="images/IMG_4464.JPG" >
             <h2><font size="6pt">Les details integres et les commandes holistiques permettent d'acceder a vos instrument cliniques,de les activer et de les desactiver en toute
             simplicite,sans meme devoir y penser.Le materiel se fait plus que discret,grace a quoi vous pouvez vousconcentrer totalement sur les soins dentaires</h2>
                  <br>
             <br>
                  <h1><strong>kit blanchissement</strong></h1>
-                 <img src="IMG_4463.JPG" >
+                 <img src="images/IMG_4463.JPG" >
             <h2><font size="6pt">Nouveau materiel dentaire blanchiment des dents LED
                  10x3 ml de gel de blanchiment(0,1%de peroxyde de carbamide), 2 plateaux buccaux, 1xMini lampe LED pour bouche</h2></font>
             
