--- a/code/NOS PRODUITS.html
+++ b/code/NOS PRODUITS.html
@@ -9,24 +9,24 @@
             <a href="projets.html"><img src="images/Capture (2).PNG" ></a> 
             <div class="container">
           <h1><strong>POUDRE FLASH PEARL</strong></h1>
-          <img src="IMG_4394.JPG">
+          <img src="images/IMG_4394.JPG">
           <p><b><font size="6pt">C'est une poudre a polir et a detartrer, poudre nettoyante a particules sheriques constitue de calcium.Minimise les
           bouchons dus aux poudres classiques.conditionnement</font></p></b>
                     <br>
            <h1><strong>COMPRIMES DENTIFRICE ROSE/STERIBLUE</strong></h1>
-          <img src="IMG_4399.JPG">
+          <img src="images/IMG_4399.JPG">
           <p><b><font size="6pt">Les comprimes de dentifrice mentionnent des sensibilites reduites et moins de probleme de sante dentaire pour les 
           utilusateurs,ce qui devrait vous donner de quoi sourire.pratique pour voyager,pa besoin de prendre un gros tube de dentifrice, juste quelques
         comprimes</font></p></b>
           <br>
           <h1><strong>RETRACAP/25-ITENA</strong></h1>
-          <img src="IMG_4403.JPG">
+          <img src="images/IMG_4403.JPG">
           <p><b><font size="6pt">coiffes de compression parfaitementadaptees a l'anatomie des dents grace auxdecoupesdemi-spheriques.Apres application
           du traxodentdans le sulcus,Retracap est place sur la dent. il permet de faire penetrer le traxodent plus profondementdans lesulcus et ainsi
         d'obtenir une meilleur retraction dentaire</font></p></b>
            <br>
            <h1><strong>TOOTH MOUTH-GC</strong></h1>
-          <img src="IMG_4389.JPG">
+          <img src="images/IMG_4389.JPG">
           <p><b><font size="6pt">Gout agreable, laisse les dents plus lisses et plus propres. Tooth mouth ,dispositif medical de classe 1 pour soin 
           reserve aux professionels de sante, non rembourses par la securite sociale.</font></p></b>
           <br>
